grid alignment bug fix

--- a/Assignments/Assignment1/public/css/style.css
+++ b/Assignments/Assignment1/public/css/style.css
@@ -128,13 +128,18 @@ section{
 #fixtures-grid-container{
 	display: grid; /* display as grid */
 	grid-template-columns: auto auto auto; /* 3 auto sized cols */
-	grid-gap: 60px 100px; /* row gap: 60px, col gap: 100px */
+	grid-gap: 60px 90px; /* row gap: 60px, col gap: 90px */
 	padding: 30px 30px 20px 30px; /* top, right, bottom, left */
+	width: 90%; /* take 90% of width */
+	margin-left: auto; /* centers container */
+    margin-right: auto; /* centers container */
+	place-items: center; /* center items. S.O. link below */
+	/* https://stackoverflow.com/questions/45536537/centering-in-css-grid */
 }
 
 .fixture-grid-container{
 	display: grid; /* display as grid */
-	grid-template-columns: 120px 40px 120px; /* 3 cols of given px */
+	grid-template-columns: 125px 40px 125px; /* 3 cols of given px */
 	grid-gap: 0px 0px; /* no rol or col grid gaps */
 }
 
